objects/Sales_Order_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Order Histories</relationshipLabel>
        <relationshipName>Sales_Order_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apr_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Open_Opportunities__c</fullName>
        <label>Apr Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.Apr__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apr_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Open_Opportunities__c</fullName>
        <label>Aug Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.Aug__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Aug_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_Open_Opportunities__c</fullName>
        <label>Dec Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.Dec__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dec_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Open_Opportunities__c</fullName>
        <label>Feb Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.Feb__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Feb_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Current__c</fullName>
        <formula>IF(( Year__c  =  YEAR( TODAY()) ), &apos;true&apos;, &apos;false&apos;)</formula>
        <label>Is Current</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jan_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_Open_Opportunities__c</fullName>
        <label>Jan Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.Jan__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Jan_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Open_Opportunities__c</fullName>
        <label>Jul Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.Jul__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Jul_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Open_Opportunities__c</fullName>
        <label>Jun Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.Jun__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Jun_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MDM External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mar_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Open_Opportunities__c</fullName>
        <label>Mar Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.Mar__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mar_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Open_Opportunities__c</fullName>
        <label>May Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.May__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>May_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_Open_Opportunities__c</fullName>
        <label>Nov Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.Nov__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nov_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Open_Opportunities__c</fullName>
        <label>Oct Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.Oct__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oct_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_Q1_Sales__c</fullName>
        <formula>Previous_Year__r.Quarter_1_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PY Q1 Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_Q2_Sales__c</fullName>
        <formula>Previous_Year__r.Quarter_2_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PY Q2 Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_Q3_Sales__c</fullName>
        <formula>Previous_Year__r.Quarter_3_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PY Q3 Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Year</label>
        <referenceTo>Sales_Order_History__c</referenceTo>
        <relationshipLabel>Next Year</relationshipLabel>
        <relationshipName>Previous_Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q1_Provisional_Sales__c</fullName>
        <formula>case (month(today()),
1 , Jan_Actual__c + Jan_Orders__c +Feb_Forecast__c +Mar_Forecast__c ,
2 ,Jan_Actual__c +Feb_Actual__c + Feb_Orders__c+Mar_Forecast__c ,
3 ,Jan_Actual__c +Feb_Actual__c+Mar_Actual__c + Mar_Orders__c,
Jan_Actual__c +Feb_Actual__c+Mar_Actual__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 Provisional Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_Provisional_Sales__c</fullName>
        <formula>case (month(today()),
4 , Apr_Actual__c + Apr_Orders__c +May_Forecast__c +Jun_Forecast__c ,
5 ,Apr_Actual__c +May_Actual__c + May_Orders__c+Jun_Forecast__c ,
6 ,Apr_Actual__c +May_Actual__c+Jun_Actual__c + Jun_Orders__c,
if (month(today())&lt;4,May_Forecast__c +Jun_Forecast__c +Apr_Forecast__c, Apr_Actual__c +May_Actual__c+Jun_Actual__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 Provisional Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_Provisional_Sales__c</fullName>
        <formula>case (month(today()),
7 , Jul_Actual__c + Jul_Orders__c +Aug_Forecast__c +Sep_Forecast__c ,
8 ,Jul_Actual__c +Aug_Actual__c + Aug_Orders__c+Sep_Forecast__c ,
9 ,Jul_Actual__c +Aug_Actual__c+Sep_Actual__c + Sep_Orders__c,
if(month(today())&lt;7,Jul_Forecast__c +Aug_Forecast__c +Sep_Forecast__c  ,Jul_Actual__c +Aug_Actual__c+Sep_Actual__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3 Provisional Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_1_Actual__c</fullName>
        <formula>Jan_Actual__c + Feb_Actual__c + Mar_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 1 Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_1_Budget__c</fullName>
        <formula>Jan_Budget__c + Feb_Budget__c+ Mar_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 1 Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_1_Forecast__c</fullName>
        <formula>Jan_Forecast__c + Feb_Forecast__c + Mar_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 1 Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_2_Actual__c</fullName>
        <formula>Apr_Actual__c + May_Actual__c + Jun_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 2 Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_2_Budget__c</fullName>
        <formula>Apr_Budget__c + May_Budget__c+ Jun_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 2 Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_2_Forecast__c</fullName>
        <formula>Apr_Forecast__c +May_Forecast__c + Jun_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 2 Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_3_Actual__c</fullName>
        <formula>Jul_Actual__c + Aug_Actual__c + Sep_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 3 Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_3_Budget__c</fullName>
        <formula>Jul_Budget__c + Aug_Budget__c+ Sep_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 3 Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_3_Forecast__c</fullName>
        <formula>Jul_Forecast__c +Aug_Forecast__c + Sep_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 3 Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_Forecast2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_Open_Opportunities__c</fullName>
        <label>Sep Open Opportunities</label>
        <summarizedField>Opportunity_Revenue_Schedule__c.Sep__c</summarizedField>
        <summaryForeignKey>Opportunity_Revenue_Schedule__c.Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sep_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Actual__c</fullName>
        <formula>Jan_Actual__c + 
 Feb_Actual__c +
 Mar_Actual__c +
 Apr_Actual__c +
 May_Actual__c +
 Jun_Actual__c +
 Jul_Actual__c +
 Aug_Actual__c +
 Sep_Actual__c +
 Oct_Actual__c +
 Nov_Actual__c +
 Dec_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <formula>Jan_Budget__c +
 Feb_Budget__c +
 Mar_Budget__c +
 Apr_Budget__c +
 May_Budget__c +
 Jun_Budget__c +
 Jul_Budget__c +
 Aug_Budget__c +
 Sep_Budget__c +
 Oct_Budget__c +
 Nov_Budget__c +
 Dec_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Forecast2__c</fullName>
        <formula>Jan_Forecast2__c +
 Feb_Forecast2__c +
 Mar_Forecast2__c +
 Apr_Forecast2__c +
 May_Forecast2__c +
 Jun_Forecast2__c +
 Jul_Forecast2__c +
 Aug_Forecast2__c +
 Sep_Forecast2__c +
 Oct_Forecast2__c +
 Nov_Forecast2__c +
 Dec_Forecast2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecast *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Forecast__c</fullName>
        <formula>Jan_Forecast__c +
 Feb_Forecast__c +
 Mar_Forecast__c +
 Apr_Forecast__c +
 May_Forecast__c +
 Jun_Forecast__c +
 Jul_Forecast__c +
 Aug_Forecast__c +
 Sep_Forecast__c +
 Oct_Forecast__c +
 Nov_Forecast__c +
 Dec_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Open_Opportunities__c</fullName>
        <formula>Jan_Open_Opportunities__c +
 Feb_Open_Opportunities__c +
 Mar_Open_Opportunities__c +
 Apr_Open_Opportunities__c +
 May_Open_Opportunities__c +
 Jun_Open_Opportunities__c +
 Jul_Open_Opportunities__c +
 Aug_Open_Opportunities__c +
 Sep_Open_Opportunities__c +
 Oct_Open_Opportunities__c +
 Nov_Open_Opportunities__c +
 Dec_Open_Opportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Open Opportunities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Orders__c</fullName>
        <formula>Jan_Orders__c +
 Feb_Orders__c +
 Mar_Orders__c +
 Apr_Orders__c +
 May_Orders__c +
 Jun_Orders__c +
 Jul_Orders__c +
 Aug_Orders__c +
 Sep_Orders__c +
 Oct_Orders__c +
 Nov_Orders__c +
 Dec_Orders__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Text__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Order History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SOH-{0000000000}</displayFormat>
        <label>Sales Order History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>